[project]
name = "ya-changelog"
description = "Yet another changelog CLI tool."
authors = ["Andrew Cassidy"]
license = "AGPL"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/drewcassidy/yet-another-changelog"
repository = "https://github.com/drewcassidy/yet-another-changelog"

keywords = ["changelog", "commandline"]

dependencies = ["Click", "GitPython"]

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0"
]
build-backend = "setuptools.build_meta"