[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "yaclog"
description = "Yet another changelog CLI tool."
readme = "README.md"
authors = [{ name = "Andrew Cassidy", email = "drewcassidy@me.com" }]
license = "Apache-2.0"
keywords = ["changelog", "commandline", "markdown"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

requires-python = ">= 3.10"
dependencies = [
    "Click >= 8.0",
    "GitPython >= 3",
    "packaging >= 20",
    "tomlkit >= 0.11",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "Sphinx >= 8.1",
    "sphinx-click >= 2.7",
    "sphinx-rtd-theme",
    "myst-parser >= 0.14",
    "sphinx-gha",
    "sphinx-copybutton",
]

test = [
    "pytest"
]

[project.scripts]
yaclog = "yaclog.cli.__main__:cli"

[project.urls]
Source = "https://git.offworldcolonies.nexus/drewcassidy/yaclog"
Changelog = "https://yaclog.readthedocs.io/en/stable/changelog.html"
Docs = "https://yaclog.readthedocs.io/"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
include = ["yaclog*"]