[metadata]
# until setuptools supports PEP621, this will have to do
name = yaclog
description = Yet another changelog CLI tool.
author = Andrew Cassidy
license = AGPLv3
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

keywords = changelog, commandline, markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities

project_urls =
    Source Code = https://github.com/drewcassidy/yaclog
    Changelog = https://github.com/drewcassidy/yaclog/blob/main/CHANGELOG.md

[options]
install_requires = Click; GitPython
python_requires = >= 3.8
packages = find:
